// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new-workspace-type-module should pass linting after creating a new workspace from scratch using @angular-eslint 1`] = `
{
  "@angular-devkit/build-angular": "^18.X.X",
  "@angular/cli": "^18.X.X",
  "@angular/compiler-cli": "^18.X.X",
  "@types/jasmine": "~5.1.0",
  "angular-eslint": "0.0.0-e2e",
  "eslint": "^9.13.0",
  "jasmine-core": "~5.2.0",
  "karma": "~6.4.0",
  "karma-chrome-launcher": "~3.2.0",
  "karma-coverage": "~2.2.0",
  "karma-jasmine": "~5.1.0",
  "karma-jasmine-html-reporter": "~2.1.0",
  "ng-packagr": "^18.X.X",
  "typescript": "~5.X.X",
  "typescript-eslint": "8.10.0"
}
`;

exports[`new-workspace-type-module should pass linting after creating a new workspace from scratch using @angular-eslint 2`] = `
"// @ts-check
import eslint from \\"@eslint/js\\";
import tseslint from \\"typescript-eslint\\";
import angular from \\"angular-eslint\\";

export default tseslint.config(
  {
    files: [\\"**/*.ts\\"],
    extends: [
      eslint.configs.recommended,
      ...tseslint.configs.recommended,
      ...tseslint.configs.stylistic,
      ...angular.configs.tsRecommended,
    ],
    processor: angular.processInlineTemplates,
    rules: {
      \\"@angular-eslint/directive-selector\\": [
        \\"error\\",
        {
          type: \\"attribute\\",
          prefix: \\"app\\",
          style: \\"camelCase\\",
        },
      ],
      \\"@angular-eslint/component-selector\\": [
        \\"error\\",
        {
          type: \\"element\\",
          prefix: \\"app\\",
          style: \\"kebab-case\\",
        },
      ],
    },
  },
  {
    files: [\\"**/*.html\\"],
    extends: [
      ...angular.configs.templateRecommended,
      ...angular.configs.templateAccessibility,
    ],
    rules: {},
  }
);
"
`;

exports[`new-workspace-type-module should pass linting after creating a new workspace from scratch using @angular-eslint 3`] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": Object {
    "lintFilePatterns": Array [
      "src/**/*.ts",
      "src/**/*.html",
    ],
  },
}
`;

exports[`new-workspace-type-module should pass linting after creating a new workspace from scratch using @angular-eslint 4`] = `
"// @ts-check
import tseslint from \\"typescript-eslint\\";
import rootConfig from \\"../../eslint.config.js\\";

export default tseslint.config(
  ...rootConfig,
  {
    files: [\\"**/*.ts\\"],
    rules: {
      \\"@angular-eslint/directive-selector\\": [
        \\"error\\",
        {
          type: \\"attribute\\",
          prefix: \\"app\\",
          style: \\"camelCase\\",
        },
      ],
      \\"@angular-eslint/component-selector\\": [
        \\"error\\",
        {
          type: \\"element\\",
          prefix: \\"app\\",
          style: \\"kebab-case\\",
        },
      ],
    },
  },
  {
    files: [\\"**/*.html\\"],
    rules: {},
  }
);
"
`;

exports[`new-workspace-type-module should pass linting after creating a new workspace from scratch using @angular-eslint 5`] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": Object {
    "eslintConfig": "projects/another-app/eslint.config.js",
    "lintFilePatterns": Array [
      "projects/another-app/**/*.ts",
      "projects/another-app/**/*.html",
    ],
  },
}
`;

exports[`new-workspace-type-module should pass linting after creating a new workspace from scratch using @angular-eslint 6`] = `
"// @ts-check
import tseslint from \\"typescript-eslint\\";
import rootConfig from \\"../../eslint.config.js\\";

export default tseslint.config(
  ...rootConfig,
  {
    files: [\\"**/*.ts\\"],
    rules: {
      \\"@angular-eslint/directive-selector\\": [
        \\"error\\",
        {
          type: \\"attribute\\",
          prefix: \\"lib\\",
          style: \\"camelCase\\",
        },
      ],
      \\"@angular-eslint/component-selector\\": [
        \\"error\\",
        {
          type: \\"element\\",
          prefix: \\"lib\\",
          style: \\"kebab-case\\",
        },
      ],
    },
  },
  {
    files: [\\"**/*.html\\"],
    rules: {},
  }
);
"
`;

exports[`new-workspace-type-module should pass linting after creating a new workspace from scratch using @angular-eslint 7`] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": Object {
    "eslintConfig": "projects/another-lib/eslint.config.mjs",
    "lintFilePatterns": Array [
      "projects/another-lib/**/*.ts",
      "projects/another-lib/**/*.html",
    ],
  },
}
`;

exports[`new-workspace-type-module should pass linting after creating a new workspace from scratch using @angular-eslint 8`] = `
"
Linting \\"new-workspace-type-module\\"...

All files pass linting.


Linting \\"another-app\\"...

All files pass linting.


Linting \\"another-lib\\"...

__ROOT__//new-workspace-type-module/projects/another-lib/src/lib/another-lib.service.ts
  8:17  error  Unexpected empty constructor  @typescript-eslint/no-empty-function

✖ 1 problem (1 error, 0 warnings)
"
`;
